@@ -1,19 +1,8 @@
 /*
- * RED5 Open Source Media Server - https://github.com/Red5/
- * 
- * Copyright 2006-2016 by respective authors (see below). All rights reserved.
- * 
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- * 
- * http://www.apache.org/licenses/LICENSE-2.0
- * 
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * RED5 Open Source Media Server - https://github.com/Red5/ Copyright 2006-2016 by respective authors (see below). All rights reserved. Licensed under the Apache License, Version
+ * 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless
+ * required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
+ * either express or implied. See the License for the specific language governing permissions and limitations under the License.
  */
 
 package org.red5.server.net.rtmp;
@@ -103,16 +92,16 @@ public class RTMPConnManager implements IConnectionManager<RTMPConnection>, Appl
                         default:
                             // XXX implement as a task and fix logic
                             // ghost clean up 
-//                            if (max time allowed for no response from client exceeded, ping)
-//                                // Ping client
-//                                conn.ping();
-//                                // FIXME: getLastPingTime doesn't get updated right after ping
-//                                // wait x time for lastPingTime and if exceeded, disconnect
-//                                if (conn.getLastPingTime() > clientTTL * 1000) {
-//                                    log.info("TTL exceeded, disconnecting {}", conn);
-//                                    conn.close();
-//                                }
-//                            }
+                            //                            if (max time allowed for no response from client exceeded, ping)
+                            //                                // Ping client
+                            //                                conn.ping();
+                            //                                // FIXME: getLastPingTime doesn't get updated right after ping
+                            //                                // wait x time for lastPingTime and if exceeded, disconnect
+                            //                                if (conn.getLastPingTime() > clientTTL * 1000) {
+                            //                                    log.info("TTL exceeded, disconnecting {}", conn);
+                            //                                    conn.close();
+                            //                                }
+                            //                            }
                             long ioTime = 0L;
                             IoSession session = conn.getIoSession();
                             if (conn instanceof RTMPMinaConnection) {
@@ -321,7 +310,7 @@ public class RTMPConnManager implements IConnectionManager<RTMPConnection>, Appl
         } else if (cls == RTMPTConnection.class) {
             conn = (RTMPTConnection) applicationContext.getBean(RTMPTConnection.class);
         } else {
-            conn = (RTMPConnection) cls.newInstance();
+            conn = (RTMPConnection) cls.getDeclaredConstructor().newInstance();
         }
         return conn;
     }
